--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body onload="set_shits_up()">
-    <button onclick="roll()">roll :3</button>
+    <button id="clicky" onclick="roll()">roll</button>
+    <main id="main"></main>
+    <footer id="footer">
+
+    </footer>
 </body>
 </html>
