its now a table

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body onload="set_shits_up()">
     <button id="clicky" onclick="roll()">roll</button>
-    <main id="main"></main>
+    <table id="main">
+        <th>
+            <td>Amt</td>
+            <td>Antique</td>
+        </th>
+    </table>
     <footer id="footer">
 
     </footer>
