--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <td>Antique</td>
         </th>
     </table>
+    <button onclick="reset()">reset</button>
     <footer id="footer">
-
+    
     </footer>
 </body>
 </html>
