more styling (im normal)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <button id="clicky" onclick="roll()">roll</button>
     <table id="main">
         <th>
-            <td>Amt</td>
+            <td>Amount</td>
             <td>Antique</td>
+            <td>rarity</td>
         </th>
     </table>
     <button onclick="reset()">reset</button>
